@@ -2,6 +2,7 @@ package edu.cs102.g04t06.game.presentation.console;
 
 import java.util.ArrayList;
 import java.util.Comparator;
+import java.util.Collections;
 import java.util.List;
 import java.util.Scanner;
 
@@ -36,19 +37,22 @@ public class PlayerSetupUI implements ThemeStyleSheet {
         public final int          totalPlayers;      // 2–4
         public final List<Player> players;           // index 0 = local player, rest = friends/CPUs
         public final List<Boolean> isHuman;          // true = human, false = CPU
+        public final List<String> aiDifficulties;   // "EASY" or "HARD" per player (null for humans)
 
         public PlayerSetupResult(String localPlayerName,
                                  boolean isOnline,
                                  List<Player> players,
-                                 List<Boolean> isHuman) {
-            if (players.size() != isHuman.size()) {
-                throw new IllegalArgumentException("players and isHuman size must match");
+                                 List<Boolean> isHuman,
+                                 List<String> aiDifficulties) {
+            if (players.size() != isHuman.size() || players.size() != aiDifficulties.size()) {
+                throw new IllegalArgumentException("players, isHuman, and aiDifficulties size must match");
             }
-            this.localPlayerName = localPlayerName;
-            this.isOnline        = isOnline;
-            this.players         = List.copyOf(players);
-            this.totalPlayers    = this.players.size();
-            this.isHuman         = List.copyOf(isHuman);
+            this.localPlayerName  = localPlayerName;
+            this.isOnline         = isOnline;
+            this.players          = List.copyOf(players);
+            this.totalPlayers     = this.players.size();
+            this.isHuman          = List.copyOf(isHuman);
+            this.aiDifficulties   = Collections.unmodifiableList(new ArrayList<>(aiDifficulties));
         }
 
         @Override
@@ -59,7 +63,7 @@ public class PlayerSetupUI implements ThemeStyleSheet {
             for (int i = 0; i < players.size(); i++) {
                 sb.append("  ").append(i + 1).append(". ")
                   .append(players.get(i).getName())
-                  .append(isHuman.get(i) ? " [Human]" : " [CPU]")
+                  .append(isHuman.get(i) ? " [Human]" : " [CPU - " + aiDifficulties.get(i) + "]")
                   .append("\n");
             }
             return sb.toString();
@@ -109,7 +113,8 @@ public class PlayerSetupUI implements ThemeStyleSheet {
                 localName,
                 false,
                 players,
-                humans
+                humans,
+                difficulties
         );
         showSummary(result);
         return result;
@@ -128,12 +133,28 @@ public class PlayerSetupUI implements ThemeStyleSheet {
     // -------------------------------------------------------------------------
     // Step 3 — Auto-generate CPU players
     // -------------------------------------------------------------------------
-    private void addCpuPlayers(int count, int referenceAge, List<PlayerSeed> playerSeeds) {
+
+   private void addCpuPlayers(int count, int referenceAge, List<PlayerSeed> playerSeeds) {
         String[] cpuNames = {"CPU-1", "CPU-2", "CPU-3"};
         for (int i = 0; i < count; i++) {
             String cpuName = cpuNames[i];
             int cpuAge = randomNearbyAge(referenceAge);
             playerSeeds.add(new PlayerSeed(cpuName, cpuAge, false));
+
+    private String promptDifficulty(String cpuName) {
+        while (true) {
+            System.out.println(WHITE + "  Select difficulty for " + CYAN + cpuName + RESET + ":");
+            System.out.println("    " + GREEN + "1" + RESET + "  Easy");
+            System.out.println("    " + RED   + "2" + RESET + "  Hard");
+            System.out.print(WHITE + "  Choice (1-2): " + RESET);
+            String input = scanner.nextLine().trim();
+            switch (input) {
+                case "1": return "EASY";
+                case "2": return "HARD";
+                default:
+                    printError("Please enter 1 or 2.");
+                    sleep(800);
+            }
         }
     }
 
@@ -161,10 +182,11 @@ public class PlayerSetupUI implements ThemeStyleSheet {
         for (int i = 0; i < result.players.size(); i++) {
             String name    = result.players.get(i).getName();
             boolean human  = result.isHuman.get(i);
+            String diff    = result.aiDifficulties.get(i);
             String tag     = human
                     ? GREEN + "[Human]" + RESET
-                    : BLUE  + "[CPU]"   + RESET;
-            String youTag  = name.equals(result.localPlayerName) ? GOLD + " ← you" + RESET : "";
+                    : BLUE  + "[CPU - " + diff + "]" + RESET;
+            String youTag  = (i == 0) ? GOLD + " ← you" + RESET : "";
             System.out.println("    " + CYAN + (i + 1) + ". " + RESET
                     + WHITE + name + RESET + "  " + tag + youTag);
         }
